         parameter value when using multipart representations.
         Reported by xwen97.
       - Fixed issue #821: status reason phrase set by the Jetty connector.
       - Fixed issue #823: Service-Component header missing in manifest.mf for servlet extension.
         Reported by Ioan Lupu.
       - XEE injection security fix. Issue #826. Reported by Alvaro Munoz.

- 2.1.6 (12/05/2013)
    - Bug fixed
       - Fixed issue #809 regression introduced when handling issues #774 and #778.

- 2.1.5 (12/05/2013)
    - Bug fixed
       - Fixed issue #791, EncoderService exposed size-fixed lists of ignored and accepted media types.
         Reported by Tal Liron.
       - Fixed issue #784, that leads to a maladjusted exception.
         Reported by David Jorm.
       - Fixed issue #649, if needed, add base64 padding characters to encoded md5 hash before decoding.
         Reported and contributed by Andy Dennie.
    - Enhancements
      - Added support of nowrap "deflater" (support of GZIP compatible compression), issue #786.
        Reported and contributed by Tal Liron.
      - Added ability to override Accept-encoding header values #654.
        Proposed by Tal Liron.
      - WritableSocketChannel whould write in loop to ensure all data been written, issue #783.
        Contributed by Xiaoping Feng.

- 2.1.4 (09/07/2013)
    - Bug fixed
       - Fixed issues #774, #778 - Removed default support of JavaBeans XML-deserialization, 
         binary-deserialization on ObjectRepresentation class.
         Reported by David Jorm.

- 2.1.3 (08/23/2013)
    - Bug fixed
       - Fixed issue #734 - Implementations of XmlHttpRequest in IE versions prior to IE10 turn 
         204 status into 1223. Reported by Koen Maes.
       - Fixed issue #739 - copy extension headers from JAX-RS api to restlet response.
         Reported by Mark Kharitonov.
       - Fixed issue #727 generation of JSON extension for GWT edition.
       - Fixed issue #757 - Infinite Loop in Feed.